# auralis

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  Caddyfile  Dockerfile.api  Dockerfile.web  README.md  RECONSTRUCTION_ENGINE.md  deploy_log.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  logs.yml  security-scan.yml
auralis/: __init__.py  config.py
auralis/api/: __init__.py  auth.py  gpu_manager.py  server.py  websocket.py
auralis/api/routes/: brain.py  console.py  ear.py  gpu.py  grid.py  hands.py  reconstruct.py  reference.py  samples.py
auralis/brain/: __init__.py  agent.py  gemini_client.py  memory.py  production_ai.py
auralis/console/: __init__.py  auto_correct.py  dna_brain.py  fx.py  gap_analyzer.py  mastering.py  mixer.py  organic_pack.py  qc.py  stem_decisions.py  stem_generator.py  stem_recipes.py  visualize.py
auralis/console/dsp/: __init__.py
auralis/ear/: __init__.py  analyzer.py  midi_extractor.py  profiler.py  reference_bank.py  sample_extractor.py  separator.py  spectral.py
auralis/grid/: __init__.py  arrangement.py  midi.py  theory.py  yue_gen.py
auralis/hands/: __init__.py  ddsp_synth.py  effects.py  faust_dsp.py  midi_transcribe.py  mixer.py  stable_audio.py  synth.py  texture_gen.py  timbre_cloner.py  torchfx_dsp.py  vst_host.py
auralis/mono_aullador/: __init__.py  million_pieces.py
auralis/qc/: __init__.py  comparator.py  convergence.py  fingerprint.py  musical_review.py
docs/: STEM_DECISION_ENGINE.md
scripts/: check_bank.py  deploy.sh  extract_job_data.py  extract_job_logs.py  gen_password.py  quality-check.sh  repopulate_bank.py  restore_refs.py  test_midi.py  verify_bank.py
tests/: __init__.py  manual_test_decisions.py  run_full_pipeline.py  test_100_upgrade.py  test_api.py  test_composition_upgrade.py  test_dna_brain.py  test_dsp_safety.py  test_dynamic_mix.py  test_emotional_brain.py  test_final_3pct.py  test_living_timbre.py  test_readiness_audit.py  verify_generative_pipeline.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/components/: audio-player.tsx  auth-guard.tsx  bar-by-bar.tsx  sidebar.tsx  spectral-compare.tsx
web/lib/: api.ts  auth-context.tsx
(+15 files in other folders)
