[project]
name = "auralis"
version = "0.1.0"
description = "AURALIS — AI Music Production Engine. Hear deeper. Create beyond."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"

dependencies = [
    # Core Audio
    "numpy>=1.26",
    "scipy>=1.12",
    "soundfile>=0.12",
    "librosa>=0.10",
    # Analysis (lightweight)
    "pyloudnorm>=0.1",
    # MIDI & Music Theory
    "mido>=1.3",
    # AI/LLM
    "openai>=1.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.9",
    # Utilities
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "structlog>=24.4",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    # AWS (GPU management)
    "boto3>=1.34",
]

[project.optional-dependencies]
# Heavy ML deps — installed on EC2 with GPU
ml = [
    "torch>=2.0",
    "demucs>=4.0",
]
# Synthesis & Effects — need system libs
audio = [
    "pedalboard>=0.9",
    "matchering>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["auralis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "demucs.*",
    "dawdreamer.*",
    "pedalboard.*",
    "essentia.*",
    "madmom.*",
    "basic_pitch.*",
    "matchering.*",
    "librosa.*",
    "soundfile.*",
    "pyloudnorm.*",
    "mido.*",
    "pyo.*",
    "torch.*",
    "magenta.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["auralis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
